@@ -1,6 +1,11 @@
 Changelog
 =========
 
+Development
+===========
+
+- Contact.Relationship.IsClient is true by default.
+
 v0.0.15.4
 =========
 
